<resources>
    <string name="app_name">KidsCafeSolution</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_kids">키즈</string>
    <string name="title_zone">놀이구역</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_add_child_list">AddChildListActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--iot makers push event-->
    <string name="EVENT_ID_TEMP">001PTL001D10005609</string>
    <string name="EVENT_ID_HUMID">001PTL001D10005469</string>
    <string name="EVENT_ID_CALL">001PTL001D10005620</string>
    <string name="EVENT_ID_END_BEFORE10">push.endTime.before10minute</string>
    <string name="EVENT_ID_END_EXACT">push.endTime.exact</string>

    <string name="AUTO_LOGIN">autoLogin</string>

    <!--<string name="PreferenceScreen_CNT_TEMP">push.cnt.temp</string>-->
    <!--<string name="PreferenceScreen_CNT_END">push.cnt.endTime</string>-->

    <!--ar page-->
    <string name="AR_INFO">ar_info</string>
    <string name="AR_CONNECT">ar_connect</string>

    <string name="exit_app">"\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다."</string>

    <!--tag-->
    <string name="activity">activityTAG</string>
</resources>
