<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--부모 화면-->
    <PreferenceCategory android:title="알림 설정">
        <PreferenceScreen
            android:key="zoneCondition"
            android:title="쾌적도 알림"
            android:summary="모두 사용 중">
            <SwitchPreference
                android:key="@string/EVENT_ID_TEMP"
                android:title="온도 알림"
                android:defaultValue="true"
                android:summary="10도 이상일 때 알려줍니다." />
            <SwitchPreference
                android:key="@string/EVENT_ID_HUMID"
                android:defaultValue="true"
                android:title="습도 알림"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="endTime"
            android:title="퇴장 시간 안내"
            android:summary="모두 사용 중">
            <SwitchPreference
                android:key="@string/EVENT_ID_END_BEFORE10"
                android:defaultValue="true"
                android:title="10분 전"/>
            <SwitchPreference
                android:key="@string/EVENT_ID_END_EXACT"
                android:defaultValue="true"
                android:title="정각"/>
        </PreferenceScreen>
        <Preference
            android:key="@string/AUTO_LOGIN"
            android:defaultValue="true"
            android:title="로그아웃"/>
    </PreferenceCategory>

</PreferenceScreen>